History
-------

??/??/????  *** v2.26 ***

            - Uses DatLib v2.19.
            - Improved -dX modes (understands merging despite differing names) 

11/07/2006  *** v2.25 ***

            - Uses DatLib v2.16.
            - Fixed bug that messed up internal indices (affected crc matching)
            - More intelligent directory scanner (regarding samples and CHDs)
            - Removed 64MB file limit from directory scanner (reads 1MB blocks)

09/01/2006  *** v2.24 ***

            - Added -d4 (even smaller supplements - for ROM archival only).
            - Updated the usage information on the command line.
            - Tidied up the code in generate.c (used by -d1, -d2, -d3, -d4).

06/12/2005  *** v2.23 ***

            - Uses DatLib v2.13.
            - DatLib v2.12 broke the RomCenter drivers (now fixed).

05/12/2005  *** v2.22 ***

            - Uses DatLib v2.12.
            - Fixed a rare crash (if the longest line in the dat was the last).
            - Fixed a problem loading RomCenter data files containing [].
            - From DatLib v2.11.
            - M1 XML will not use hex for ROM sizes after all... changed back!

31/10/2005  *** v2.21 ***

            - Uses DatLib v2.10.
            - Fixed identification of ListXML for MAME+MESS v0.101u4 onwards.

28/10/2005  *** v2.20 ***

            - Uses DatLib v2.9.
            - M1 XML will use hex for ROM sizes. Changed driver accordingly.

05/10/2005  *** v2.19 ***

            - Uses DatLib v2.8.
            - Improved the logerror() function (used for reporting ZIP errors).
            - Added support for M1's XML format (when it becomes available).

17/09/2005  *** v2.18 ***

            - Uses DatLib v2.7.
            - Compiled with zlib 1.3.
            - Improved Neo-Geo handling for the Nebula driver.
            - Improved 'romof' handling for RomCenter 2 driver (during loading).

31/08/2005  *** v2.17 ***

            - Uses DatLib v2.6.