@@ -5,6 +5,8 @@ History
 
             - Uses DatLib v2.19.
             - Improved -dX modes (understands merging despite differing names) 
+            - Added CPS-2 to descriptions when producing disk supplements
+            - Added sourcefile information to output datafile
 
 11/07/2006  *** v2.25 ***
 
